--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
         "**/dist": true,
         "**/node_modules": true,
         "**/tmp": true
-    }
+    },
+    "files.autoSave": "afterDelay"
 }
